use single quotes where possible

--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -8,8 +8,8 @@ production:
   apdex_t: 0.5
   ssl: true
   monitor_mode: true
-  license_key: <%= ENV["NEW_RELIC_LICENSE_KEY"] %>
+  license_key: <%= ENV['NEW_RELIC_LICENSE_KEY'] %>
   developer_mode: false
-  app_name: <%= ENV["NEW_RELIC_APP_NAME"] %>
+  app_name: <%= ENV['NEW_RELIC_APP_NAME'] %>
   capture_params: false
   log_level: info
